slurm-6787697.out
Traceback (most recent call last):
  File "/panfs/roc/groups/5/malkofah/jaber038/projects/residual/main.py", line 14, in <module>
    import run
  File "/panfs/roc/groups/5/malkofah/jaber038/projects/residual/src/help/run.py", line 27
    subprocess.call([CALL_NM, infile[i], outfile[i], ARGS, '-background')
                                                                        ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
